--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InterBridge - Find Your Perfect Internship</title>
+    <title>InternBridge - Find Your Perfect Internship</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <i class="fas fa-bridge"></i>
-                <span>InterBridge</span>
+                <span>InternBridge</span>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
@@ -133,7 +133,7 @@
                     <i class="fas fa-bridge"></i>
                     <span>InterBridge</span>
                 </div>
-                <p>&copy; 2025 InterBridge. Connecting talent with opportunities.</p>
+                <p>&copy; 2025 InternBridge. Connecting talent with opportunities.</p>
             </div>
         </div>
     </footer>
