--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - InterBridge</title>
+    <title>Login - InternBridge</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <i class="fas fa-bridge"></i>
-                <span>InterBridge</span>
+                <span>InternBridge</span>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
@@ -60,7 +60,7 @@
             <div class="login-card">
                 <div class="login-header">
                     <h1>Student Login</h1>
-                    <p>Access your InterBridge account</p>
+                    <p>Access your InternBridge account</p>
                 </div>
 
                 <form id="login-form" class="login-form">
@@ -119,7 +119,7 @@
             </div>
 
             <div class="login-features">
-                <h3>Why Login to InterBridge?</h3>
+                <h3>Why Login to InternBridge?</h3>
                 <div class="features-grid">
                     <div class="feature-item">
                         <i class="fas fa-bookmark"></i>
