--- a/frontend/login.html
+++ b/frontend/login.html
@@ -59,25 +59,38 @@
         <div class="login-container">
             <div class="login-card">
                 <div class="login-header">
-                    <h1>Student Login</h1>
-                    <p>Access your InternBridge account</p>
+                    <h1>Login to InterBridge</h1>
+                    <p>Choose your account type to continue</p>
                 </div>
 
-                <form id="login-form" class="login-form">
+                <!-- User Type Tabs -->
+                <div class="user-type-tabs">
+                    <button type="button" class="tab-button active" data-tab="student">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>Student</span>
+                    </button>
+                    <button type="button" class="tab-button" data-tab="company">
+                        <i class="fas fa-building"></i>
+                        <span>Company/Admin</span>
+                    </button>
+                </div>
+
+                <!-- Student Login Form -->
+                <form id="student-login-form" class="login-form tab-content active" data-content="student">
                     <div class="form-group">
-                        <label for="email">Email Address</label>
+                        <label for="student-email">Email Address</label>
                         <div class="input-group">
                             <i class="fas fa-envelope"></i>
-                            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                            <input type="email" id="student-email" name="email" placeholder="Enter your student email" required>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label for="student-password">Password</label>
                         <div class="input-group">
                             <i class="fas fa-lock"></i>
-                            <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                            <button type="button" class="password-toggle" id="password-toggle">
+                            <input type="password" id="student-password" name="password" placeholder="Enter your password" required>
+                            <button type="button" class="password-toggle" data-target="student-password">
                                 <i class="fas fa-eye"></i>
                             </button>
                         </div>
@@ -85,7 +98,7 @@
 
                     <div class="form-options">
                         <label class="checkbox-container">
-                            <input type="checkbox" id="remember-me" name="remember">
+                            <input type="checkbox" id="student-remember" name="remember">
                             <span class="checkmark"></span>
                             Remember me
                         </label>
@@ -94,7 +107,51 @@
 
                     <button type="submit" class="btn btn-login">
                         <i class="fas fa-sign-in-alt"></i>
-                        Login
+                        Login as Student
+                    </button>
+                </form>
+
+                <!-- Company/Admin Login Form -->
+                <form id="company-login-form" class="login-form tab-content" data-content="company">
+                    <div class="form-group">
+                        <label for="company-email">Company Email Address</label>
+                        <div class="input-group">
+                            <i class="fas fa-building"></i>
+                            <input type="email" id="company-email" name="email" placeholder="Enter your company email" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="company-password">Password</label>
+                        <div class="input-group">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" id="company-password" name="password" placeholder="Enter your password" required>
+                            <button type="button" class="password-toggle" data-target="company-password">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="company-id">Company ID (Optional)</label>
+                        <div class="input-group">
+                            <i class="fas fa-id-card"></i>
+                            <input type="text" id="company-id" name="company_id" placeholder="Enter your company ID">
+                        </div>
+                    </div>
+
+                    <div class="form-options">
+                        <label class="checkbox-container">
+                            <input type="checkbox" id="company-remember" name="remember">
+                            <span class="checkmark"></span>
+                            Keep me logged in
+                        </label>
+                        <a href="#" class="forgot-password">Forgot Password?</a>
+                    </div>
+
+                    <button type="submit" class="btn btn-login">
+                        <i class="fas fa-building"></i>
+                        Login as Company
                     </button>
                 </form>
 
@@ -119,8 +176,10 @@
             </div>
 
             <div class="login-features">
-                <h3>Why Login to InternBridge?</h3>
-                <div class="features-grid">
+                <h3 id="features-title">Why Login to InterBridge?</h3>
+                
+                <!-- Student Features -->
+                <div class="features-grid student-features active" id="student-features">
                     <div class="feature-item">
                         <i class="fas fa-bookmark"></i>
                         <h4>Save Favorites</h4>
@@ -140,6 +199,30 @@
                         <i class="fas fa-user-graduate"></i>
                         <h4>Profile Management</h4>
                         <p>Update your skills and preferences anytime</p>
+                    </div>
+                </div>
+                
+                <!-- Company Features -->
+                <div class="features-grid company-features" id="company-features">
+                    <div class="feature-item">
+                        <i class="fas fa-plus-circle"></i>
+                        <h4>Post Internships</h4>
+                        <p>Create and manage internship opportunities</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-users"></i>
+                        <h4>Manage Candidates</h4>
+                        <p>Review applications and shortlist candidates</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-analytics"></i>
+                        <h4>Analytics Dashboard</h4>
+                        <p>Track application metrics and insights</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-handshake"></i>
+                        <h4>Talent Matching</h4>
+                        <p>AI-powered candidate recommendations</p>
                     </div>
                 </div>
             </div>
